--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
     <link rel="icon" type="image/svg+xml" href="/Images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Surf Camp</title>
+    <title>Color Relations</title>
   </head>
   <body>
     <div id="root"></div>
